tests/e2e/regex_after_name4.error
Error: syntax error in story at line 1, column 28

1|    my_service command /regexp/
                                 ^

E0054: Arguments need to be declared with `key:value`
